[project]
name = "neurve"
version = "0.1.0"
description = "atlas learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.17.4",
    "torch>=1.3.1",
    "torchvision>=0.4.2",
    "scipy>=1.5.3",
    "tqdm",
    "tensorboardX",
]

[project.optional-dependencies]
test = ["pytest"]
wandb = ["wandb"]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neurve"]
