[project]
name = "neurve"
dynamic = ["version"]
description = "atlas learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.17.4",
    "torch>=1.3.1",
    "torchvision>=0.4.2",
    "scipy>=1.5.3",
    "tqdm",
    "tensorboardX",
]

[project.optional-dependencies]
test = ["pytest"]
wandb = ["wandb"]
dev = ["setuptools_scm", "pre-commit"]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neurve"]

[tool.setuptools_scm]

[tool.black]
line-length = 79

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
